--- a/src/Weather.css
+++ b/src/Weather.css
@@ -51,7 +51,10 @@
 }
 
 .Weather .unit {
+  font-size: 28px;
   padding: 0;
+  position: relative;
+  top: -6px;
 }
 
 .weather-icon .wi {
@@ -115,20 +118,12 @@
   }
 
   .Weather .unit {
-    position: relative;
-    right: -15px;
-  }
-
-  .Weather .unit {
-    font-size: 15px;
-    padding: 0;
-  }
-
-  .WeatherChangeUnits #celsius,
-  .WeatherChangeUnits #fahrenheit {
+    font-size: 24px;
     margin: 0;
-    height: 12px;
-    width: 12px;
+    padding: 0;
+    position: relative;
+    right: -8px;
+    top: -2px;
   }
 
   .weather-icon .wi {
@@ -171,23 +166,18 @@
   }
 
   .Weather .unit {
-    font-size: 12px;
+    font-size: 17px;
+    margin: 0;
     padding: 0;
     position: relative;
     right: -10px;
-  }
-
-  .WeatherChangeUnits #celsius,
-  .WeatherChangeUnits #fahrenheit {
-    margin: 0;
-    height: 10px;
-    width: 10px;
+    top: -3px;
   }
 
   .weather-icon .wi {
     font-size: 46px;
     position: relative;
-    left: -32px;
+    left: -30px;
     bottom: -18px;
   }
 
